Fix wierd z-index

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -63,7 +63,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2;
 }
 
 .carousel__nav-controls {
